# GDSC-PS-1

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: ring_buffer.hpp  types.hpp  utils.hpp
src/engine/: analyzer.cpp  analyzer.hpp  hook_manager.cpp  hook_manager.hpp  inference.cpp  inference.hpp  model_loader.cpp  model_loader.hpp
src/io/: exporter.cpp  exporter.hpp  importer.cpp  importer.hpp
src/tui/: anomaly_ledger.cpp  anomaly_ledger.hpp  app.cpp  app.hpp  attention_heatmap.cpp  attention_heatmap.hpp  metrics_panel.cpp  metrics_panel.hpp  packet_stream.cpp  packet_stream.hpp  startup_menu.cpp  startup_menu.hpp  topology_tree.cpp  topology_tree.hpp
